@@ -275,12 +275,6 @@ public final class ReferralHelper {
         return caseData.getReferralCollection().size() + 1;
     }
 
-    public static int getCurrentReferralNumber(CaseData caseData) {
-        if (CollectionUtils.isEmpty(caseData.getReferralCollection())) {
-            return 0;
-        }
-        return caseData.getReferralCollection().size();
-    }
     /**
      * Creates a referral and adds it to the referral collection.
      * @param caseData contains all the case data
@@ -441,8 +435,7 @@ public final class ReferralHelper {
                 .filter(r -> !r.getValue().getReferralStatus().equals(ReferralStatus.CLOSED))
                 .map(r -> DynamicValueType.create(
                         r.getValue().getReferralNumber(),
-                        r.getValue().getReferralNumber() + " " + r.getValue().getReferralSubject()))
-                .collect(Collectors.toList()));
+                        r.getValue().getReferralNumber() + " " + r.getValue().getReferralSubject())).toList());
     }
 
     /**
